force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/NSSales_Marketing_Manager_Assignment__c.object-meta.xml
<CustomObject>
    <description>This custom objects allows ConnectNS users to associate Marketing Manager Assignments to an Account. An Account can contain multiple marketing manager assignments.</description>
    <label>Marketing Manager Assignment</label>
    <nameField>
        <displayFormat>MA-{0}</displayFormat>
        <label>Marketing Manager Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Manager Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>