force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/NSSales_Account__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It stores the Account Name of the record</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Manager Assignments</relationshipLabel>
    <relationshipName>Marketing_Manager_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>