force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/NSSales_AssignedId__c.field-meta.xml
<CustomField>
    <fullName>NSSales_AssignedId__c</fullName>
    <description>It checks if the logged in User is the Marketing Manager of the current record</description>
    <formula>IF($User.Id == NSSales_MarketingManager__r.Id, &quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssignedId</label>
    <type>Text</type>
</CustomField>