force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/NSSales_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NSSales_BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Equipment Planning</fullName>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
            </value>
            <value>
                <fullName>Industrial Products</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Marketing Research &amp; Forecasting</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Unit Train</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>