force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/NSSales_MarketingManager__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MarketingManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It stores the Marketing Manager user name of the related record</description>
    <label>Marketing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Manager_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>