force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/NSSales_MarketingManagerAssignmentID__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MarketingManagerAssignmentID__c</fullName>
    <description>It stores the Market Manager ID concatinated with the Market Manager’s name.</description>
    <formula>Name +&#39; : &#39;+  NSSales_MarketingManagerNameHidden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Manager Assignment ID</label>
    <type>Text</type>
</CustomField>