force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/NSSales_MarketingManagerEmailHidden__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MarketingManagerEmailHidden__c</fullName>
    <description>This is a hidden field to store the email id of the assigned marketing manager</description>
    <formula>NSSales_MarketingManager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Manager Email</label>
    <type>Text</type>
</CustomField>