force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/NSSales_MarketingManagerNameHidden__c.field-meta.xml
<CustomField>
    <fullName>NSSales_MarketingManagerNameHidden__c</fullName>
    <description>This is a hidden field to store the name of the Marketing Manager</description>
    <formula>NSSales_MarketingManager__r.FirstName +&quot; &quot;+ NSSales_MarketingManager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Manager Name</label>
    <type>Text</type>
</CustomField>