force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/NSSales_Role__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Field Sales Manager</fullName>
            </value>
            <value>
                <fullName>Group Manager</fullName>
            </value>
            <value>
                <fullName>Industrial Development Manager</fullName>
            </value>
            <value>
                <fullName>Market Manager</fullName>
            </value>
            <value>
                <fullName>National Account Manager</fullName>
            </value>
            <value>
                <fullName>Pricing Manager</fullName>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Automotive Account Manager</fullName>
                <isActive>false</isActive>
                <label>Automotive Account Manager</label>
            </value>
            <value>
                <fullName>Industrial Products Account Manager</fullName>
                <isActive>false</isActive>
                <label>Industrial Products Account Manager</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>