force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/fields/Primary_Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Account Classification</label>
    <referenceTo>BU__c</referenceTo>
    <relationshipLabel>Marketing Manager Assignments</relationshipLabel>
    <relationshipName>Marketing_Manager_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>