force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NSSales_MarketingManager__c</columns>
    <columns>NSSales_BusinessUnit__c</columns>
    <columns>NSSales_Role__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>