force-app/main/default/objects/NSSales_Marketing_Manager_Assignment__c/listViews/NSSales_MyMarketingManagerAssignments.listView-meta.xml
<ListView>
    <fullName>NSSales_MyMarketingManagerAssignments</fullName>
    <columns>NSSales_Account__c</columns>
    <columns>NSSales_Role__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NSSales_AssignedId__c</field>
        <operation>equals</operation>
        <value>TRUE</value>
    </filters>
    <label>My Marketing Manager Assignments</label>
</ListView>